# jujutsu-summarize-hook

./: .mise.toml  CLAUDE.md  README.ja.md  README.md  pyproject.toml  test_summarizer.py
docs/anthropic/: READEME.md  README.md
src/jj_hook/: __init__.py  cli.py  config.py  git_backend.py  jujutsu_backend.py  summarizer.py  template_loader.py  vcs_backend.py
src/jj_hook/hooks/: __init__.py  post_tool_use.py  pre_tool_use.py  user_prompt_submit.py
src/jj_hook/templates/: agent_content.md  branch_name.md  commit_analysis.md  commit_message.md  revision_description.md  slash_command.md
src/vcs_cc_hook/: cli.py  cli_git.py  cli_jj.py  cli_vcs.py  config.py  git_backend.py  jujutsu_backend.py  summarizer.py  template_loader.py  vcs_backend.py
src/vcs_cc_hook/hooks/: __init__.py  post_tool_use.py  pre_tool_use.py
src/vcs_cc_hook/templates/common/: branch_name.md
src/vcs_cc_hook/templates/git/: commit_description.md  commit_message.md
src/vcs_cc_hook/templates/jj/: commit_message.md  revision_description.md
tests/: test_vcs_backend.py
