[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vcs-cc-hook"
version = "0.1.0"
description = "Claude Code hooks for Git and Jujutsu with AI-powered commit summaries"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "Satsuki Akiba", email = "anosatsuk124@gmail.com" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "mypy>=1.17.0",
    "ruff>=0.12.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
jj-cc-hook = "vcs_cc_hook.cli_jj:main"
git-cc-hook = "vcs_cc_hook.cli_git:main"
vcs-cc-hook = "vcs_cc_hook.cli_vcs:main"

[project.urls]
Homepage = "https://github.com/anosatsuk124/vcs-cc-hook"
Repository = "https://github.com/anosatsuk124/vcs-cc-hook"

[tool.hatch.build.targets.wheel]
packages = ["src/jj_hook"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "PT"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
